# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")

config("extra_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/include",
    "${inputmethod_path}/frameworks/js/napi/inputmethodclient",
    "${inputmethod_path}/interfaces/kits/js",
  ]
}

ohos_shared_library("extra_config_napi") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  sources = [
    "${inputmethod_path}/frameworks/js/napi/inputmethodclient/js_utils.cpp",
    "${inputmethod_path}/frameworks/kits/extra_config/extra_config_napi.cpp",
  ]

  configs = [ ":extra_config" ]

  deps = [
    "${inputmethod_path}/common:inputmethod_common",
    "${inputmethod_path}/frameworks/js/napi/common:inputmethod_js_common",
  ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:napi_common",
    "c_utils:utils",
    "hilog:libhilog",
  ]

  public_configs = [ ":extra_config" ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "inputmethod"
  part_name = "imf"
}

config("extra_ani_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/include",
    "${inputmethod_path}/interfaces/kits/js",
  ]
}

ohos_shared_library("extra_config_ani") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  sources = [
    "${inputmethod_path}/frameworks/kits/extra_config/extra_config_ani.cpp",
  ]

  configs = [ ":extra_ani_config" ]

  deps = [
    "${inputmethod_path}/common:inputmethod_common",
    "${inputmethod_path}/interfaces/inner_api/inputmethod_controller:inputmethod_client",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "runtime_core:ani",
    "runtime_core:ani_helpers",
  ]

  public_configs = [ ":extra_ani_config" ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "inputmethod"
  part_name = "imf"
}
