# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")

config("enable_ime_config") {
  include_dirs = [
    "include",
    "${inputmethod_path}/services/include",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/include",
  ]
}


ohos_static_library("enable_ime_static") {
  sources = [
    "src/enable_ime_data_observer.cpp",
    "src/enable_ime_data_parser.cpp",
  ]

  public_configs = [ ":enable_ime_config" ]

  cflags_cc = [ "-fvisibility=hidden" ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:dataobs_manager",
    "hilog:libhilog",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils"
  ]

  subsystem_name = "inputmethod"
  part_name = "imf"
}
