# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")

config("settings_data_config") {
  include_dirs = [
    "include",
    "${inputmethod_path}/common/include",
    "${inputmethod_path}/services/include",
    "${inputmethod_path}/services/adapter/os_account_adapter/include",
    "${inputmethod_path}/services/adapter/settings_data_provider/common/include",
    "${inputmethod_path}/services/json/include",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/include",
    "${inputmethod_path}/frameworks/native/inputmethod_ability/include",
  ]
}

ohos_static_library("settings_data_static") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [
    "common/src/settings_data_observer.cpp",
    "common/src/settings_data_utils.cpp",
    "src/ime_enabled_info_manager.cpp",
    "src/enable_upgrade_manager.cpp",
    "src/numkey_apps_manager.cpp",
  ]

  public_configs = [ ":settings_data_config" ]

  cflags_cc = [ "-fvisibility=hidden" ]
  deps = [
    "${inputmethod_path}/services/file:imf_file_static",
    "${inputmethod_path}/services/json:imf_json_static",
  ]
  external_deps = [
    "ability_base:zuri",
    "ability_runtime:dataobs_manager",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "init:libbegetutil",
    "input:libmmi-client",
    "ipc:ipc_single",
    "os_account:os_account_innerkits",
    "resource_management:global_resmgr",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "inputmethod"
  part_name = "imf"
}
