# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/inputmethod/imf/inputmethod.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("ImeEnabledInfoManagerFuzzTest") {
  module_out_path = "imf/imf"

  fuzz_config_file =
      "${inputmethod_path}/test/fuzztest/imeenabledinfomanager_fuzzer"

  include_dirs = [
    "${inputmethod_path}/services/adapter/settings_data_provider/include",
    "${inputmethod_path}/services/adapter/ime_connection_manager/include",
    "${inputmethod_path}/services/include",
    "${inputmethod_path}/test/common",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "${inputmethod_path}/services/adapter/settings_data_provider/src/ime_enabled_info_manager.cpp",
    "imeenabledinfomanager_fuzzer.cpp",
  ]

  deps = [
    "${inputmethod_path}/interfaces/inner_api/inputmethod_controller:inputmethod_client_static",
    "${inputmethod_path}/services:inputmethod_service_static",
    "${inputmethod_path}/services/adapter/settings_data_provider:settings_data_static",
    "${inputmethod_path}/services/file:imf_file_static",
    "${inputmethod_path}/services/json:imf_json_static",
    "${inputmethod_path}/test/unittest/cpp_test/common:inputmethod_tdd_util",
  ]

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "googletest:gtest_main",
    "hilog:libhilog",
    "init:libbeget_proxy",
    "init:libbegetutil",
    "input:libmmi-client",
    "resource_management:global_resmgr",
  ]
  if (window_manager_use_sceneboard) {
    external_deps += [ "window_manager:libwm_lite" ]
  } else {
    external_deps += [ "window_manager:libwm" ]
  }
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":ImeEnabledInfoManagerFuzzTest",
  ]
}
###############################################################################