# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/inputmethod/imf/inputmethod.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("InputClientStubFuzzTest") {
  module_out_path = "inputmethod/inputmethod"

  fuzz_config_file =
      "//base/inputmethod/imf/test/fuzztest/inputclientstub_fuzzer"

  include_dirs = [
    "//base/inputmethod/imf/frameworks/inputmethod_controller/include",
    "//base/inputmethod/imf/frameworks/inputmethod_ability/include",
    "//base/inputmethod/imf/services/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/ability/ability_runtime/interfaces/inner_api/ability_manager/include",
    "//third_party/jsoncpp/include",
    "//foundation/ability/ability_runtime/interfaces/inner_api/app_manager/include/appmgr",
    "//foundation/ability/ability_runtime/services/abilitymgr/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "inputclientstub_fuzzer.cpp" ]

  deps = [
    "//base/inputmethod/imf/frameworks/inputmethod_ability:inputmethod_ability",
    "//base/inputmethod/imf/frameworks/inputmethod_controller:inputmethod_client",
    "//base/inputmethod/imf/services:inputmethod_service",
    "//foundation/ability/ability_runtime/services/abilitymgr:abilityms",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_single:ipc_single",
    "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":InputClientStubFuzzTest",
  ]
}
###############################################################################
